[package]
name = "rpi-playground"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "blinky"
path = "src/bin/blinky.rs"
test = false
doc = false

[dependencies]
cortex-m-rt = "0.7.3"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.9.1", features = [
	"arch-cortex-m",
	"executor-thread",
] }
embassy-rp = { version = "0.9.0", features = [
	"rp2040",
	"critical-section-impl",
	"time-driver",
] }
embassy-time = { version = "0.5.0", features = [
	"defmt",
	"defmt-timestamp-uptime",
] }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }


[profile.release]
# Enable generation of debug symbols even on release builds
debug = true
