[package]
name = "rpi-playground"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "3-led-pot"
test = false
bench = false

[[bin]]
name = "blinky"
test = false
bench = false

[[bin]]
name = "button"
test = false
bench = false

[[bin]]
name = "counter"
test = false
bench = false

[[bin]]
name = "dimmer"
test = false
bench = false

[[bin]]
name = "lcd"
test = false
bench = false

[[bin]]
name = "rgb"
test = false
bench = false

[[bin]]
name = "rgb-button"
test = false
bench = false


[dependencies]
ag-lcd = { version = "0.3.0", features = ["i2c"] }
cortex-m-rt = "0.7.3"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.9.1", features = [
	"arch-cortex-m",
	"executor-thread",
] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-rp = { version = "0.9.0", features = [
	"rp2040",
	"critical-section-impl",
	"time-driver",
] }
embassy-time = { version = "0.5.0", features = [
	"defmt",
	"defmt-timestamp-uptime",
] }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
port-expander = "0.6.5"


[profile.release]
# Enable generation of debug symbols even on release builds
debug = true
